--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: The-traveller-s-oracle-or-maxims-for-locomotion-part-2-of-2-b-Containing-precepts-for-promoti__70726
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 70726-h/images/cover.jpg
 creator:
   authors:
   - agent_name: Jervis, John
@@ -11,6 +14,8 @@ creator:
     gutenberg_agent_id: '33482'
     url: http://www.gutenberg.org/2009/agents/33482
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/70726#The-traveller-s-oracle-or-maxims-for-locomotion-part-2-of-2-b-Containing-precepts-for-promoti_
 gutenberg_issued: '2023-05-09'
 identifiers:
   gutenberg: '70726'
